corpus/functions.txt
==================
ANSI
==================

function void f();
endfunction

---

(source_text
  (package_item
    (function_declaration
      (function_body_declaration_ansi
        (function_data_type_or_implicit (data_type_or_void))
        (simple_identifier)
      )
    )
  )
)

==================
non-ANSI
==================

function void f;
endfunction

---

(source_text
  (package_item
    (function_declaration
      (function_body_declaration_nonansi
        (function_data_type_or_implicit (data_type_or_void))
        (simple_identifier)
      )
    )
  )
)

==================
ANSI w/ statement
==================

function void f();
  return expression;
endfunction

---

(source_text
  (package_item
    (function_declaration
      (function_body_declaration_ansi
        (function_data_type_or_implicit (data_type_or_void))
        (simple_identifier)
        (statement (jump_statement (expression)))
      )
    )
  )
)

==================
ANSI w/ ports
==================

function void f(input int a, output int b);
  return expression;
endfunction

---

(source_text
  (package_item
    (function_declaration
      (function_body_declaration_ansi
        (function_data_type_or_implicit (data_type_or_void))
        (simple_identifier)
        (tf_port_list
          (tf_port_item
            (tf_port_direction (port_direction))
            (data_type_or_implicit (data_type (integer_atom_type)))
            (simple_identifier)
          )
          (tf_port_item
            (tf_port_direction (port_direction))
            (data_type_or_implicit (data_type (integer_atom_type)))
            (simple_identifier)
          )
        )
        (statement (jump_statement (expression)))
      )
    )
  )
)

==================
ANSI w/ block_item_declaration
==================

function void f();
  block_item_declaration
  return expression;
endfunction

---

(source_text
  (package_item
    (function_declaration
      (function_body_declaration_ansi
        (function_data_type_or_implicit (data_type_or_void))
        (simple_identifier)
        (block_item_declaration)
        (statement (jump_statement (expression)))
      )
    )
  )
)

==================
ANSI w/ end identifier
==================

function void f();
  return expression;
endfunction : f

---

(source_text
  (package_item
    (function_declaration
      (function_body_declaration_ansi
        (function_data_type_or_implicit (data_type_or_void))
        (simple_identifier)
        (statement (jump_statement (expression)))
        (simple_identifier)
      )
    )
  )
)

==================
ANSI with implicit types
==================

function void f(signed [] b, [][] c);
  return expression;
endfunction

---

(source_text
  (package_item
    (function_declaration
      (function_body_declaration_ansi
        (function_data_type_or_implicit (data_type_or_void))
        (simple_identifier)
        (tf_port_list
          (tf_port_item
            (data_type_or_implicit (implicit_data_type
              (signing)
              (packed_dimension (unsized_dimension))
            ))
            (simple_identifier)
          )
          (tf_port_item
            (data_type_or_implicit (implicit_data_type
              (packed_dimension (unsized_dimension))
              (packed_dimension (unsized_dimension))
            ))
            (simple_identifier)
          )
        )
        (statement (jump_statement (expression)))
      )
    )
  )
)
